[DEVHUB-1340] Add Sort-By Feature (#251)
* add css and flora components to implement sort-by feature

* Adjust margins and gaps on search box grid

* added sort-by box react logic - WIP

* added css

* patched css issue in /search

* sortby function done

* updated based on Amanda's comment

* fixed type issue

* added sort by to search page

* hid Most-Popular option and updated realm search url in yml

* updated realm_search_url for staging pipelines only

* patched updatequery issue

* removed redundant css

Co-authored-by: Matt Colella <matt.colella@mongodb.com>

--- a/.drone.yml
+++ b/.drone.yml
@@ -22,7 +22,7 @@ steps:
       REALM_API_URL:
         from_secret: REALM_API_URL
       REALM_SEARCH_URL:
-        from_secret: REALM_SEARCH_URL
+        from_secret: REALM_SEARCH_URL_STAGING
       STRAPI_URL:
         from_secret: STRAPI_URL_STAGING
       DEVHUB_URL:
@@ -239,7 +239,7 @@ steps:
       REALM_API_URL:
         from_secret: REALM_API_URL
       REALM_SEARCH_URL:
-        from_secret: REALM_SEARCH_URL
+        from_secret: REALM_SEARCH_URL_STAGING
       STRAPI_URL:
         from_secret: STRAPI_URL_STAGING
       DEVHUB_URL:
