--- a/.github/workflows/pull-request-checks.yml
+++ b/.github/workflows/pull-request-checks.yml
@@ -8,6 +8,7 @@ env:
     REALM_API_URL: ${{ secrets.REALM_API_URL }}
     REALM_SEARCH_URL: ${{ secrets.REALM_SEARCH_URL }}
     STRAPI_URL: ${{ secrets.STRAPI_DEV_URL }}
+    STRAPI_URL_TEST: ${{ secrets.STRAPI_URL_TEST }}
     DEVHUB_URL: ${{ secrets.DEVHUB_URL }}
 jobs:
     check-formatting-and-lint:
