--- a/environments/staging.yaml
+++ b/environments/staging.yaml
@@ -13,6 +13,7 @@ envSecrets:
   REALM_SEARCH_URL: devcenter-secrets
   STRAPI_URL: devcenter-secrets
   STRAPI_URL_TEST: devcenter-secrets
+  STRAPI_API_TOKEN: devcenter-secrets
   DEVHUB_URL: devcenter-secrets
   PREVIEW_SECRET_KEY: devcenter-secrets
   PROMETHEUS_AUTH_USER: devcenter-secrets
