--- a/.github/workflows/pull-request-checks.yml
+++ b/.github/workflows/pull-request-checks.yml
@@ -9,6 +9,7 @@ env:
     REALM_SEARCH_URL: ${{ secrets.REALM_SEARCH_URL }}
     STRAPI_URL: ${{ secrets.STRAPI_DEV_URL }}
     STRAPI_URL_TEST: ${{ secrets.STRAPI_URL_TEST }}
+    STRAPI_API_TOKEN: ${{ secrets.STRAPI_API_TOKEN }}
     DEVHUB_URL: ${{ secrets.DEVHUB_URL }}
 jobs:
     check-formatting-and-lint:
