Replace ec2 URL

--- a/.drone.yml
+++ b/.drone.yml
@@ -25,6 +25,8 @@ steps:
         from_secret: REALM_SEARCH_URL_STAGING
       STRAPI_URL:
         from_secret: STRAPI_URL_STAGING
+      STRAPI_API_TOKEN:
+        from_secret: STRAPI_API_TOKEN
       DEVHUB_URL:
         from_secret: DEVHUB_URL
       SENTRY_AUTH_TOKEN:
@@ -121,6 +123,8 @@ steps:
         from_secret: REALM_SEARCH_URL
       STRAPI_URL:
         from_secret: STRAPI_URL_PROD
+      STRAPI_API_TOKEN:
+        from_secret: STRAPI_API_TOKEN
       DEVHUB_URL:
         from_secret: DEVHUB_URL
       SENTRY_AUTH_TOKEN:
@@ -208,6 +212,8 @@ steps:
         from_secret: REALM_SEARCH_URL_STAGING
       STRAPI_URL:
         from_secret: STRAPI_URL_STAGING
+      STRAPI_API_TOKEN:
+        from_secret: STRAPI_API_TOKEN
       DEVHUB_URL:
         from_secret: DEVHUB_URL
       SENTRY_AUTH_TOKEN:
@@ -275,6 +281,8 @@ steps:
         from_secret: REALM_SEARCH_URL
       STRAPI_URL:
         from_secret: STRAPI_URL_PROD
+      STRAPI_API_TOKEN:
+        from_secret: STRAPI_API_TOKEN
       DEVHUB_URL:
         from_secret: DEVHUB_URL
       SENTRY_AUTH_TOKEN:
@@ -343,6 +351,8 @@ steps:
         from_secret: REALM_SEARCH_URL
       STRAPI_URL:
         from_secret: STRAPI_URL_STAGING
+      STRAPI_API_TOKEN:
+        from_secret: STRAPI_API_TOKEN
       DEVHUB_URL:
         from_secret: DEVHUB_URL
       SENTRY_AUTH_TOKEN:
