--- a/environments/prod.yaml
+++ b/environments/prod.yaml
@@ -20,6 +20,7 @@ envSecrets:
   PROMETHEUS_AUTH_PASS: devcenter-secrets
   SENTRY_AUTH_TOKEN: devcenter-secrets
   SENTRY_DSN: devcenter-secrets
+  REVALIDATE_TOKEN: devcenter-secrets
 
 autoscaling:
   minReplicas: 2
