--- a/.drone.yml
+++ b/.drone.yml
@@ -64,7 +64,7 @@ steps:
 
 trigger:
   branch:
-    - ah/redirect-fix-preview
+    - main
   event:
     - push
 
@@ -82,7 +82,7 @@ steps:
       chart_version: 4.11.3
       add_repos: [mongodb=https://10gen.github.io/helm-charts]
       namespace: devrel
-      release: devcenter-frontend-ah
+      release: devcenter-frontend
       values: image.tag=devcenter-staging-build-${DRONE_BUILD_PARENT},image.pullPolicy=Always,image.repository=795250896452.dkr.ecr.us-east-1.amazonaws.com/devrel/${DRONE_REPO_NAME}
       api_server: https://api.staging.corp.mongodb.com
       kubernetes_token:
