Define module augmentation for next-auth interfaces

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,7 @@
     },
     "rootDir": "src/",
     "include": [
+        "next-auth.d.ts",
         "next-env.d.ts",
         "src/**/*.ts",
         "src/**/*.tsx",
