--- a/environments/staging.yaml
+++ b/environments/staging.yaml
@@ -6,7 +6,7 @@ env:
   ACCOUNT_PORTAL_URL: https://account-qa.mongodb.com
   APP_ENV: staging
   HOST_URL: mongodbcom-cdn.staging.corp.mongodb.com
-  NEXTAUTH_URL: https://mongodbcom-cdn.staging.corp.mongodb.com/developer/api/auth/
+  NEXTAUTH_URL: https://devcenter-frontend-sso.devrel.staging.corp.mongodb.com/developer/api/auth/
 
 envSecrets:
   DEVHUB_URL: devcenter-secrets
@@ -59,7 +59,7 @@ resources:
 ingress:
   enabled: true
   path: /developer
-  hosts: ["devcenter-frontend.devrel.staging.corp.mongodb.com"]
+  hosts: ["devcenter-frontend-sso.devrel.staging.corp.mongodb.com"]
 
 metrics:
   enabled: true
