--- a/.drone.yml
+++ b/.drone.yml
@@ -13,8 +13,9 @@ steps:
     - yarn install --frozen-lockfile
     - yarn build
     environment:
+      ACCOUNT_PORTAL_URL: https://account-qa.mongodb.com
       APP_ENV: staging
-      HOST_URL: mongodbcom-cdn.staging.corp.mongodb.com
+      HOST_URL: devcenter-frontend-sso.devrel.staging.corp.mongodb.com
       NPM_AUTH:
         from_secret: NPM_AUTH
       NPM_EMAIL:
@@ -200,6 +201,7 @@ steps:
     - yarn install --frozen-lockfile
     - yarn build
     environment:
+      ACCOUNT_PORTAL_URL: https://account.mongodb.com
       APP_ENV: staging
       HOST_URL: mongodbcom-cdn.staging.corp.mongodb.com
       NPM_AUTH:
