Do not cache /api/auth/:slug paths, useSWR for session

--- a/.drone.yml
+++ b/.drone.yml
@@ -13,6 +13,7 @@ steps:
     - yarn install --frozen-lockfile
     - yarn build
     environment:
+      ACCOUNT_PORTAL_URL: https://account-qa.mongodb.com
       APP_ENV: staging
       HOST_URL: mongodbcom-cdn.staging.corp.mongodb.com
       NPM_AUTH:
@@ -111,6 +112,7 @@ steps:
     - yarn install --frozen-lockfile
     - yarn build
     environment:
+      ACCOUNT_PORTAL_URL: https://account.mongodb.com
       APP_ENV: production
       HOST_URL: www.mongodb.com
       NPM_AUTH:
@@ -200,6 +202,7 @@ steps:
     - yarn install --frozen-lockfile
     - yarn build
     environment:
+      ACCOUNT_PORTAL_URL: https://account-qa.mongodb.com
       APP_ENV: staging
       HOST_URL: mongodbcom-cdn.staging.corp.mongodb.com
       NPM_AUTH:
@@ -269,6 +272,7 @@ steps:
     - yarn install --frozen-lockfile
     - yarn build
     environment:
+      ACCOUNT_PORTAL_URL: https://account.mongodb.com
       APP_ENV: production
       HOST_URL: www.mongodb.com
       NPM_AUTH:
