--- a/.drone.yml
+++ b/.drone.yml
@@ -13,9 +13,9 @@ steps:
     - yarn install --frozen-lockfile
     - yarn build
     environment:
-      ACCOUNT_PORTAL_URL: https://account-qa.mongodb.com
+      ACCOUNT_PORTAL_URL: https://account.mongodb.com
       APP_ENV: staging
-      HOST_URL: mongodbcom-cdn.staging.corp.mongodb.com
+      HOST_URL: devcenter-frontend-sso.devrel.staging.corp.mongodb.com
       NPM_AUTH:
         from_secret: NPM_AUTH
       NPM_EMAIL:
@@ -65,7 +65,7 @@ steps:
 
 trigger:
   branch:
-    - main
+    - ah/devhub-1041-test
   event:
     - push
 
@@ -83,7 +83,7 @@ steps:
       chart_version: 4.11.3
       add_repos: [mongodb=https://10gen.github.io/helm-charts]
       namespace: devrel
-      release: devcenter-frontend
+      release: devcenter-frontend-sso
       values: image.tag=devcenter-staging-build-${DRONE_BUILD_PARENT},image.pullPolicy=Always,image.repository=795250896452.dkr.ecr.us-east-1.amazonaws.com/devrel/${DRONE_REPO_NAME}
       api_server: https://api.staging.corp.mongodb.com
       kubernetes_token:
