--- a/.drone.yml
+++ b/.drone.yml
@@ -14,7 +14,7 @@ steps:
     - yarn build
     environment:
       APP_ENV: staging
-      HOST_URL: mongodbcom-cdn.staging.corp.mongodb.com
+      HOST_URL: devcenter-frontend-seo.devrel.staging.corp.mongodb.com
       NPM_AUTH:
         from_secret: NPM_AUTH
       NPM_EMAIL:
@@ -64,7 +64,7 @@ steps:
 
 trigger:
   branch:
-    - main
+    - ah/devhub-1290-seoqa
   event:
     - push
 
@@ -82,7 +82,7 @@ steps:
       chart_version: 4.11.3
       add_repos: [mongodb=https://10gen.github.io/helm-charts]
       namespace: devrel
-      release: devcenter-frontend
+      release: devcenter-frontend-seo
       values: image.tag=devcenter-staging-build-${DRONE_BUILD_PARENT},image.pullPolicy=Always,image.repository=795250896452.dkr.ecr.us-east-1.amazonaws.com/devrel/${DRONE_REPO_NAME}
       api_server: https://api.staging.corp.mongodb.com
       kubernetes_token:
