--- a/.drone.yml
+++ b/.drone.yml
@@ -22,7 +22,7 @@ steps:
       REALM_API_URL:
         from_secret: REALM_API_URL
       REALM_SEARCH_URL:
-        from_secret: REALM_SEARCH_URL_STAGING
+        from_secret: REALM_SEARCH_URL
       STRAPI_URL:
         from_secret: STRAPI_URL_STAGING
       STRAPI_API_TOKEN:
