[DEVHUB-1041] SSO for DevCenter (#271)
* Add next-auth, leafygreen user menu packages, update config

* Add leafygreen menu to desktop and mobile views

* Update README.md

* Add withAuth to _middleware.ts, getInitialProps on _app

* Define module augmentation for next-auth interfaces

* Add signout functionality and custom redirect callback

* Finishing signin callback

* Cleanup signin page

* Add commentary on signin / getSession

* Add environment variables

* Updating signout, signin functionality

* Do not cache /api/auth/:slug paths, useSWR for session

* Mock useSession for Jest tests

* Update pull request env vars

* Fix post-signin redirect route for already logged in case

* Code review comments

* Remove unused imports, extra /api/session/ call

--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
         "@emotion/css": "11.9.0",
         "@emotion/react": "11.9.0",
         "@emotion/styled": "11.8.1",
+        "@leafygreen-ui/leafygreen-provider": "2.3.0",
+        "@leafygreen-ui/mongo-nav": "9.2.0",
         "@mdb/consistent-nav": "1.2.15",
         "@mdb/flora": "0.22.6",
         "@sentry/nextjs": "7.7.0",
@@ -36,6 +38,7 @@
         "lodash.debounce": "4.0.8",
         "lru-cache": "7.10.1",
         "next": "12.1.0",
+        "next-auth": "4.10.3",
         "next-plugin-preval": "1.2.4",
         "next-seo": "5.4.0",
         "pino": "8.0.0",
