--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "scripts": {
         "dev": "next dev",
         "build": "next build",
+        "postbuild": "next-sitemap --config next-sitemap.config.js",
         "build:analyze": "ANALYZE=true next build",
         "start": "next start",
         "lint": "next lint",
@@ -41,6 +42,7 @@
         "next-auth": "4.10.3",
         "next-plugin-preval": "1.2.4",
         "next-seo": "5.4.0",
+        "next-sitemap": "^3.1.21",
         "pino": "8.0.0",
         "pluralize": "8.0.0",
         "prom-client": "14.0.1",
