Upgrade nextjs to 12.3.0 and convert images to next/image

--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
         "@types/react-truncate": "2.3.4",
         "apollo-link-rest": "0.9.0-rc.1",
         "axios": "^0.27.2",
+        "babel-plugin-lodash": "^3.3.4",
+        "babel-plugin-transform-imports": "^2.0.0",
         "feed": "4.2.2",
         "graphql": "16.2.0",
         "graphql-anywhere": "4.2.7",
@@ -37,7 +39,7 @@
         "html-react-parser": "1.4.11",
         "lodash.debounce": "4.0.8",
         "lru-cache": "7.10.1",
-        "next": "12.1.0",
+        "next": "12.3.0",
         "next-auth": "4.10.3",
         "next-plugin-preval": "1.2.4",
         "next-seo": "5.4.0",
@@ -61,7 +63,7 @@
     },
     "devDependencies": {
         "@babel/plugin-transform-react-jsx": "^7.17.3",
-        "@emotion/babel-plugin": "11.7.2",
+        "@emotion/babel-plugin": "11.10.2",
         "@next/bundle-analyzer": "12.0.8",
         "@playwright/test": "^1.22.2",
         "@testing-library/jest-dom": "5.16.1",
