--- a/package.json
+++ b/package.json
@@ -76,6 +76,8 @@
         "husky": "4.3.8",
         "jest": "27.4.7",
         "lint-staged": "11.1.1",
+        "postcss": "8.4.16",
+        "postcss-url": "10.1.3",
         "prettier": "2.5.1",
         "typescript": "4.5.4"
     },
