--- a/environments/prod.yaml
+++ b/environments/prod.yaml
@@ -27,6 +27,7 @@ envSecrets:
   SENTRY_DSN: devcenter-secrets
   STRAPI_URL: devcenter-secrets
   STRAPI_API_TOKEN: devcenter-secrets
+  NEXT_IMAGE_HOSTS: devcenter-secrets
 
 autoscaling:
   minReplicas: 4
