--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     },
     "dependencies": {
         "@apollo/client": "3.5.7",
+        "@emotion/core": "^11.0.0",
         "@emotion/css": "11.9.0",
         "@emotion/react": "11.9.0",
         "@emotion/styled": "11.8.1",
@@ -55,6 +56,7 @@
         "remark-gfm": "1.0.0",
         "sanitize-html": "2.7.0",
         "styled-components": "5.3.3",
+        "stylis": "^4.1.2",
         "swr": "1.2.1",
         "theme-ui": "0.10.0",
         "unist-util-visit": "^2.0.3"
@@ -71,6 +73,7 @@
         "@types/node": "17.0.12",
         "@types/react": "17.0.38",
         "@types/sanitize-html": "^2.6.2",
+        "@types/stylis": "^4.0.2",
         "eslint": "8.21.0",
         "eslint-config-next": "12.2.3",
         "husky": "4.3.8",
