--- a/.drone.yml
+++ b/.drone.yml
@@ -398,7 +398,14 @@ steps:
       add_repos: [mongodb=https://10gen.github.io/helm-charts]
       namespace: devrel
       release: devcenter-frontend-preview-${number}
-      values: image.tag=devcenter-frontend-preview-build-${number},image.pullPolicy=Always,image.repository=795250896452.dkr.ecr.us-east-1.amazonaws.com/devrel/${DRONE_REPO_NAME},ingress.enabled=true,ingress.hosts[0]=devcenter-frontend-preview-${number}.devrel.staging.corp.mongodb.com
+      values: >-
+        image.tag=devcenter-frontend-preview-build-${number},
+        image.pullPolicy=Always,
+        image.repository=795250896452.dkr.ecr.us-east-1.amazonaws.com/devrel/${DRONE_REPO_NAME},
+        ingress.enabled=true,
+        ingress.hosts[0]=devcenter-frontend-preview-${number}.devrel.staging.corp.mongodb.com
+        env.HOST_URL=devcenter-frontend-preview-${number}.devrel.staging.corp.mongodb.com
+        env.NEXTAUTH_URL=https://devcenter-frontend-preview-${number}.devrel.staging.corp.mongodb.com/developer/api/auth/
       api_server: https://api.staging.corp.mongodb.com
       kubernetes_token:
         from_secret: staging_kubernetes_token
