--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "@leafygreen-ui/leafygreen-provider": "2.3.0",
         "@leafygreen-ui/mongo-nav": "9.2.0",
         "@mdb/consistent-nav": "1.2.15",
+        "@mdb/devcenter-components": "file:/Users/matt/10gen/devcenter-components",
         "@mdb/flora": "1.1.0-rc.0",
         "@sentry/nextjs": "7.7.0",
         "@types/react-truncate": "2.3.4",
